--- a/index.html
+++ b/index.html
@@ -5,33 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="styles/styles.css">
+
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
-  Order Summary
+  <div class="card">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <div class="card-img"></div>
 
-  Annual Plan
-  $59.99/year
+    <div class="description">
 
-  Change
+      <h2>Order Summary</h2>
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!</p>
+
+      <div class="plan">
+        <div class="music-icon">
+          <img src="../images/icon-music.svg" alt="">
+        </div>
+
+        <div class="desc-plan">
+          <h4>Annual Plan</h4>
+          <p>$59.99/year</p>
+        </div>
+
+        <a href="" class="btn-change">Change</a>
+      </div>
+
+    </div>
+
+    <div class="btn-card">
+      <div class="btn-pay">Proceed to Payment</div>
+      <div class="btn-cancel">Cancel Order</div>
+    </div>
+
   </div>
+
 </body>
+
+
 </html>
