--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="btn-card">
       <div class="btn-pay">Proceed to Payment</div>
-      <div class="btn-cancel">Cancel Order</div>
+      <a href="#" class="btn-cancel">Cancel Order</a>
     </div>
 
   </div>
