--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div class="plan">
         <div class="music-icon">
-          <img src="../images/icon-music.svg" alt="">
+          <img src="images/icon-music.svg" alt="">
         </div>
 
         <div class="desc-plan">
