--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
       device anywhere you like!</p>
 
       <div class="plan">
-        <div class="music-icon">
-          <img src="images/icon-music.svg" alt="">
-        </div>
+
+        <img src="images/icon-music.svg" alt="" class="music-icon">
 
         <div class="desc-plan">
           <h4>Annual Plan</h4>
